<resources>
    <string name="app_name">DSM-T1-MR171621-GL202882</string>

    <!-- Navigation bottom -->
    <string name="presentation">Inicio</string>
    <string name="equation">Ecuación</string>
    <string name="votes">Votos</string>
    <string name="pay">Pagos</string>

    <!-- Login -->
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="goback">Regresar</string>
    <string name="name">Nombre</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>

    <!-- Fragments -->
    <!-- First Fragment -->
    <string name="first_title">Ejercicio 1:</string>
    <string name="first_a">a:</string>
    <string name="first_b">b:</string>
    <string name="first_c">c:</string>
    <string name="first_button">Calcular</string>
    <string name="x1">X1:</string>
    <string name="x2">X2:</string>

    <!-- Fragments Presentation -->
    <string name="title">Taller Práctico - #1</string>
    <string name="subtitle">Presentado por:</string>
    <string name="name_one">Alejandro Javier González Loarca</string>
    <string name="carne_one">GL202882</string>
    <string name="name_two">José Samuel Mena Reyes</string>
    <string name="carne_two">MR171621</string>
    <string name="logout">Cerrar Sesión</string>

    <!-- Fragment Ejercicio 2 -->
    <string name="ejercicio_2_title">Ejercicio 2 - Votaciones</string>
    <string name="votaciones_entrantes">Votaciones entrantes:</string>
    <string name="calcular_resultados">Calcular resultados</string>
    <string name="candidato">Candidato</string>
    <string name="votos">Votos</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>

    <!-- Fragment Ejercicio 3 -->
    <string name="ejercicio_3_pagos">Ejercicio 3 - Pagos</string>
    <string-array name="cargos_array">
        <item>Gerente</item>
        <item>Asistente</item>
        <item>Secretaria</item>
        <item>Otro</item>
    </string-array>

</resources>