<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:id="@+id/layout_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="40dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_a"
                android:textSize="30sp" />
            <EditText
                android:id="@+id/var_a"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:inputType="numberSigned" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_b"
                android:textSize="30sp" />
            <EditText
                android:id="@+id/var_b"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:inputType="numberSigned" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_c"
                android:textSize="30sp" />
            <EditText
                android:id="@+id/var_c"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:inputType="numberSigned" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_button"
        app:layout_constraintBottom_toBottomOf="@+id/layout_inputs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x1"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/result_x1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x2"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/result_x2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/red" />
    </LinearLayout>

</LinearLayout>