<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_person_24" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/emailLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/email"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/emailEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="20dp"-->
<!--            android:inputType="textEmailAddress"-->
<!--            />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/passwordLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/password"-->
<!--        app:endIconMode="password_toggle"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/passwordEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="20dp"-->
<!--            android:inputType="textPassword"-->
<!--        />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/login"
        app:icon="@drawable/ic_baseline_login_24"
        app:iconGravity="textStart"
        style="@style/Widget.MaterialComponents.Button.Icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/register"
        app:icon="@drawable/ic_baseline_person_add_24"
        app:iconGravity="textStart"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />


</LinearLayout>